# yizy-vet

./: .gitignore  README.md  docker-compose.yml  package.json
.github/workflows/: daily-feed-ingest.yml
scripts/: .envrc  seed.py  spotify-shows.txt  substack-handles.txt  youtube-channels.txt
scripts/feed_aggregator/: main.py  pyproject.toml
scripts/feed_aggregator/feed_aggregator.egg-info/: PKG-INFO  SOURCES.txt
scripts/feed_aggregator/sources/: blogs.py  claude_blog.py  devto.py  gh_trending.py  hn.py  pg_essays.py  spotify.py  substack.py  youtube.py
scripts/feed_aggregator/tests/: smoke_test.py
src/: app.css  hooks.server.ts
src/lib/: types.ts  week.ts
src/lib/components/: DayCarousel.svelte  EntryCard.svelte  KelvinsPickBtn.svelte  RadioGroup.svelte  RejectedList.svelte  SwipeCard.svelte  SwipeStack.svelte  WeekNavigator.svelte  WeekSummaryList.svelte
src/lib/server/: collections.ts  db.ts  entries.ts
src/routes/: +layout.svelte  +page.server.ts
src/routes/api/entries/[id]/: +server.ts
src/routes/api/ingest/: +server.ts
src/routes/api/weekly/pick/: +server.ts
src/routes/login/: +page.server.ts  +page.svelte
src/routes/logout/: +page.server.ts
src/routes/summary/: +page.server.ts  +page.svelte
src/routes/week/: +page.server.ts  +page.svelte
